mdmCeneveo/src/objects/Raw_Sales_Data__c.object
<CustomObject>
    <description>This object is to hold raw sales data for various plants coming from different billing systems, which will be then processed to enter data in Sales Data object.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Raw Sales Datas</relationshipLabel>
        <relationshipName>Raw_Sales_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Unit__c</fullName>
        <label>Actual Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin_Forced_Account_Id__c</fullName>
        <label>Admin Forced Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Forced_Account_Match__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin Forced Account Match</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>notEqual</operation>
                <value>Parent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Raw Sales Datas (Admin Forced Account Match)</relationshipLabel>
        <relationshipName>Raw_Sales_Datas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Forced_Account_Name__c</fullName>
        <label>Admin Forced Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Forced_Plant_Product_Id__c</fullName>
        <label>Admin Forced Plant Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Forced_Plant_Product_Match__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin Forced Plant Product Match</label>
        <referenceTo>Plant_Products__c</referenceTo>
        <relationshipLabel>Raw Sales Datas (Admin Forced Plant Product Match)</relationshipLabel>
        <relationshipName>Raw_Sales_Datas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Forced_Plant_Product_Name__c</fullName>
        <label>Admin Forced Plant Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <label>Billing Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_System__c</fullName>
        <label>Business Unit Name</label>
        <picklist>
            <picklistValues>
                <fullName>Acclaim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels &amp; Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightning Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merrimack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Park</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buyout_Resale_Actual_Sales__c</fullName>
        <label>Buyout/Resale Actual Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buyout_Resale_Actual_Units__c</fullName>
        <label>Buyout/Resale Actual Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buyout_Resale_Budget_Sales__c</fullName>
        <label>Buyout/Resale Budget Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buyout_Resale_Budget_Units__c</fullName>
        <label>Buyout/Resale Budget Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENV_1st_Pass_Budget_Amount__c</fullName>
        <label>ENV - 1st Pass Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENV_1st_Pass_Budget_Units__c</fullName>
        <label>ENV - 1st Pass Budget Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_In_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error In Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Log__c</fullName>
        <label>Error Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <label>Forecast $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GMDollars__c</fullName>
        <label>GM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GM__c</fullName>
        <label>GM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mgr Group</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Raw_Sales_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufactured_Actual_Sales__c</fullName>
        <label>Manufactured Actual Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufactured_Actual_Units__c</fullName>
        <label>Manufactured Actual Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufactured_Budget_Sales__c</fullName>
        <label>Manufactured Budget Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufactured_Budget_Units__c</fullName>
        <label>Manufactured Budget Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_Sales_Dollars__c</fullName>
        <label>Margin Sales Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Match_Success_Log__c</fullName>
        <label>Match Success Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Moved_to_Sales_Data__c</fullName>
        <label>Moved to Sales Data</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Period_End_Date__c</fullName>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant_Name__c</fullName>
        <label>Plant Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Product</label>
        <referenceTo>Plant_Products__c</referenceTo>
        <relationshipLabel>Raw Sales Datas</relationshipLabel>
        <relationshipName>Raw_Sales_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <label>Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Data</label>
        <referenceTo>Sales_Data__c</referenceTo>
        <relationshipLabel>Raw Sales Datas</relationshipLabel>
        <relationshipName>Raw_Sales_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Raw_Sales_Datas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Raw Sales Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Plant_Name__c</columns>
        <columns>Plant_Product__c</columns>
        <columns>Rep_Name__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Processed__c</columns>
        <columns>Error_Log__c</columns>
        <columns>Actual_Unit__c</columns>
        <columns>Actual__c</columns>
        <columns>GMDollars__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RSD-{00000000}</displayFormat>
        <label>Intermediate Sales Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Raw Sales Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>